--- a/site01/style.css
+++ b/site01/style.css
@@ -1,1 +1,35 @@
 @charset "UTF-8";
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
+.menu-principal {
+    width: 100%;
+    background-color: #252323;
+    height: 60px;
+}
+
+main {
+    margin: 0 auto;
+    width: 980px;
+    position: relative;
+}
+
+.logo {
+    float: left;
+    padding: 16px;
+    width: 65%;
+}
+
+.redes-sociais ul li {
+    margin-left: 15px;
+    display: inline-block;
+    list-style: none;
+}
+
+.redes-sociais {
+    width: 30%;
+    float: right;
+}
