--- a/site01/style.css
+++ b/site01/style.css
@@ -3,6 +3,7 @@
 body {
     width: 100%;
     height: 100%;
+    margin: 0 auto;
 }
 
 .menu-principal {
@@ -32,4 +33,33 @@ main {
 .redes-sociais {
     width: 30%;
     float: right;
+}
+
+.header-2 {
+    background-color: #e4e3e3;
+    width: 100%;
+    border-bottom: 5px solid rgb(189, 186, 186);
+}
+
+.menu ul li {
+    display: inline-block;
+    color: #8b8b8b;
+    margin-left: 15px;
+}
+
+.menu ul li a {
+    color: #8b8b8b;
+    font-size: 18px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.menu {
+    width: 70%;
+    float: left;
+}
+
+.busca {
+    width: 30%;
+    float: left;
 }
