estilizando o menu e a search bar

--- a/site01/style.css
+++ b/site01/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0 auto;
 }
 
+ul {
+    padding: 0px!important;
+}
+
 .menu-principal {
     width: 100%;
     background-color: #252323;
@@ -36,8 +40,14 @@ main {
 }
 
 .header-2 {
-    background-color: #e4e3e3;
-    width: 100%;
+    background-color: #ffffff;
+    width: 980px;
+    margin: 0 auto;
+    padding: 16px;
+}
+
+.menu-urls {
+    height: 80px;
     border-bottom: 5px solid rgb(189, 186, 186);
 }
 
@@ -60,6 +70,25 @@ main {
 }
 
 .busca {
+    text-align: center;
     width: 30%;
     float: left;
+}
+
+.busca input {
+    background-image: url(img/icone-search.png);
+    background-repeat: no-repeat;
+    background-position: 96%;
+    height: 25px;
+    padding: 7px;
+    width: 190px;
+    margin-top: 2px;
+    border: 1px solid #d6d6d6;
+}
+
+.col-100 {
+    background-color: #ffffff;
+    width: 100%;
+    float: left;
+    position: relative;
 }
