--- a/site01/style.css
+++ b/site01/style.css
@@ -107,7 +107,35 @@ button.slick-prev {
     border: none;
     width: 25px;
     height: 51px;
+    z-index: 9;
     background-color: transparent;
+    position: absolute;
     background-image: url(img/anterior.png);
     top: 35%;
+    left: 15%;
+}
+
+button.slick-next {
+    font-size: 0px;
+    border: none;
+    width: 25px;
+    height: 51px;
+    z-index: 9;
+    background-color: transparent;
+    position: absolute;
+    background-image: url(img/proximo.png);
+    top: 35%;
+    right: 15%;
+}
+
+.slick-dots li {
+    font-size: 0;
+    border: 3px solid #ffffff;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.slick-dots li.slick-active {
+    background-color: #00bac6;
 }
