rolagem de imagens completa

--- a/site01/style.css
+++ b/site01/style.css
@@ -128,14 +128,33 @@ button.slick-next {
     right: 15%;
 }
 
-.slick-dots li {
-    font-size: 0;
-    border: 3px solid #ffffff;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
+.slick-initialized {
+    overflow: hidden;
 }
 
-.slick-dots li.slick-active {
+.slick-dots li button {
+    font-size: 0px;
+    border: 5px solid #ffffff;
+    width: 20px;
+    height: 22px;
+    background: transparent;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.slick-dots {
+    margin: 0 auto;
+    width: 50%;
+    position: absolute;
+    left: 45%;
+    top: 427px;
+}
+
+li.slick-active button {
     background-color: #00bac6;
+}
+
+.slick-dots li {
+    padding-left: 10px;
+    display: inline-block;
 }
